fix: overflow in small device

--- a/src/Components/Footer/Testimonial/card.module.css
+++ b/src/Components/Footer/Testimonial/card.module.css
@@ -47,3 +47,13 @@ blockquote {
   font-family: "Poppins", sans-serif;
   padding: 0 30px;
 }
+
+@media only screen and (max-width: 500px) {
+  .main {
+    height: 150px;
+    max-width: 350px;
+  }
+  .quote {
+    font-size: 12px;
+  }
+}
