--- a/src/Components/Footer/Testimonial/testimonial.module.css
+++ b/src/Components/Footer/Testimonial/testimonial.module.css
@@ -1,8 +1,18 @@
 .box {
-  width: 550px;
-  padding: 20px 60px;
-  min-width: 100%;
-  height: 200px;
-  margin: 50px 0px !important;
+  background: #f7f3f3;
   overflow: hidden;
+  width: 100%;
+  padding: 20px 0;
+  min-width: 100%;
+  height: 300px;
+  margin: 20px 0 0px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+.head {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 30px;
+  margin-top: 30px;
 }
